--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
 	
 <script src="js/jquery-1.7.2.min.js"></script>
 <script src="js/less-1.3.0.min.js"></script>
+<!--[if gte IE 9]>
+  <style type="text/css">
+    li > div, .btn, .btn:active {
+       filter: none;
+    }
+  </style>
+<![endif]-->
 <script>
     var TicketManager = {};
     var TM = TicketManager;
-    TM.appUrl = location.protocol + '//' + location.hostname + ':' + location.port;
+    TM.appUrl = location.protocol + '//' + location.hostname + ':' + location.port + location.pathname;
 </script>
 <script src="js/lib/util.js"></script>
 <script src="js/lib/DataStore.js"></script>
